# FGNN

./: .dockerignore  .gitignore  01_Graph_Maker.ipynb  02_Preprocessor.py  03_Trainer.ipynb  Dockerfile  Explain.ipynb  GraphExcel.xlsx  README.md  Readme.ipynb  Readme.md  Static.txt  app.py  main.py  pyproject.toml  script.sh
Data/: GraphExcel.xlsx  README.txt  add_drift.py  static2.xlsx
fgnn/: launch_run.py  loss.py  scheduler.py  test_xai.py  train_gae.py  train_gnn.py
fgnn/data/: __init__.py  create_water.py  dataset.py  fuzzifier.py  preprocessor.py
fgnn/explain/: __init__.py  metrics.py
fgnn/models/: GAE.py  GNN.py  __init__.py  modules.py
fgnn/utils/: grid.py  metrics.py  run.py  tracker.py  utils.py
parameters/: Explain.yaml  GAE.yaml  GHAE.yaml  GNN.yaml  GNN_2018.yaml  GNN_2018_drift.yaml  GNN_2018_drift_test.yaml  GNN_2018_fuzzy.yaml  GNN_2018_fuzzy_lowin.yaml  GNN_2018_p2.yaml  GNN_static.yaml
parameters/preprocessing/: feature_distance.yaml  feature_distance_1819.yaml  feature_distance_drift.yaml  feature_distance_static_1819.yaml  feature_mask.yaml
slurm/: launch_run
