[project]
name = "fgnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "colorlog>=6.9.0",
    "einops>=0.8.1",
    "lovely-tensors>=0.1.18",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "torch==2.6",
    "torch-geometric>=2.6.1",
    "wandb>=0.21.0",
]
